--- a/Frontend/src/assets/base.css
+++ b/Frontend/src/assets/base.css
@@ -69,4 +69,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-color: #222222 #111111;
 }
