The add skill effect modal now handle steps
- Step modal display all values of the step
- Add/remove effect done
- Toggle completed done

--- a/Frontend/src/assets/base.css
+++ b/Frontend/src/assets/base.css
@@ -72,3 +72,13 @@ body {
 img {
   image-rendering: pixelated;
 }
+
+.p-select-overlay, .p-treeselect-overlay {
+  max-width: 0;
+}
+
+.p-tree-node-label {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
+}
