Datatable filtering with fuzzysort

--- a/Frontend/src/assets/base.css
+++ b/Frontend/src/assets/base.css
@@ -86,3 +86,9 @@ img {
 .p-treetable-thead {
   top: 0;
 }
+
+.highlight-match {
+  color: black;
+  font-weight: bold;
+  background-color: #fffa66;
+}
